# InsightOps

./: .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  extensions.py
backend/app/api/: __init__.py  analytics.py  filters.py  health.py
backend/app/clients/: __init__.py  bigquery_client.py
backend/app/queries/: filters.sql  kpis.sql  top_products.sql  transactions.sql  trends.sql
backend/app/schemas/: __init__.py  analytics.py
backend/app/services/: analytics_service.py
backend/app/utils/: errors.py  logging.py
backend/tests/: test_health.py  test_kpis.py  test_trends.py
frontend/: index.html  package.json  tsconfig.app.json
frontend/src/: main.tsx  styles.css
frontend/src/app/providers/: QueryProvider.tsx
frontend/src/app/routes/: index.tsx
frontend/src/components/charts/: TrendChart.tsx
frontend/src/components/dashboard/: KpiSection.tsx
frontend/src/components/filters/: FilterBar.tsx
frontend/src/components/tables/: RankingTable.tsx  TransactionsTable.tsx
frontend/src/features/analytics/api/: analyticsApi.ts
frontend/src/features/analytics/hooks/: useFiltersQuery.ts  useKpisQuery.ts  useTopProductsQuery.ts  useTopRegionsQuery.ts  useTransactionsQuery.ts  useTrendsQuery.ts
frontend/src/features/analytics/types/: index.ts
frontend/src/lib/: http.ts
frontend/src/pages/: DashboardPage.tsx
frontend/tests/: README.md
