[project]
name = "insightops-backend"
version = "0.1.0"
description = "InsightOps Flask backend"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "google-cloud-bigquery>=3.38.0",
]

[dependency-groups]
dev = [
    "black>=26.0.0",
    "pytest>=8.4.0",
    "ruff>=0.14.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py313"

